# ledger-inbox

./: .gitignore  AGENTS.md  README.md  mcp.json  run-all.bat  run-backend.bat  run-frontend.bat
docs/: ACCOUNTING_WORKSPACE_VISION.md  ARCHITECTURE.md  REQUIREMENTS.md
src/backend/: .gitignore  main.py  pyproject.toml  requirements.txt
src/backend/app/: main.py  mcp_tools.py
src/backend/app/agents/: business_agent.py
src/backend/app/api/: accounts.py  categories.py  dashboard.py  documents.py  health.py  owner_profile.py  parties.py  projects.py  statements.py  transactions.py
src/backend/app/core/: config.py
src/backend/app/db/: database.py  migrations.py  models.py
src/backend/app/prompts/: slip_extraction.py
src/backend/app/schemas/: account.py  category.py  document.py  owner_profile.py  party.py  project.py  slip.py  transaction.py
src/backend/app/services/: classification_service.py  dedup_service.py  easy_slip_service.py  export_service.py  gemini_service.py  image_processor.py  json_extractor.py  ollama_service.py  slip_reader_service.py  statement_service.py  tax_service.py  upload_queue.py
src/frontend/: README.md  package-lock.json
src/frontend/src/app/: globals.css  layout.tsx  page.tsx
src/frontend/src/app/accounts/: page.tsx
src/frontend/src/app/inbox/: page.tsx
src/frontend/src/app/parties/: page.tsx
src/frontend/src/components/: AccountForm.tsx  FileUpload.tsx  Layout.tsx  PartyForm.tsx  ProjectForm.tsx  QueueStatusBar.tsx  StatCard.tsx  StatementImport.tsx  TransactionForm.tsx
src/frontend/src/lib/: api.ts
(+11 files in other folders)
