[project]
name = "ledger-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.139.0",
    "fastapi-mcp>=0.4.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
